--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 	<title>My Work</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap_theta/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="shortcut icon" type="text/css" href="Resources/images/Brook.png">
 </head>
 <body>
 		 <nav class="navbar navbar-inverse">
@@ -14,11 +15,11 @@
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
       				</button>
-      				<a class="navbar-brand" href="project.html">Rober</a>
+      				<a class="navbar-brand" href="index.html">Rober</a>
     			  </div>
     			  <div class="collapse navbar-collapse" id="myNavbar">
       				<ul class="nav navbar-nav">
-        				<li><a href="About.html">About</a></li>
+        				<li><a href="contact.html">Contact</a></li>
         				<li><a href="gallery.html">Gallery</a></li>
       				</ul>
     			  </div>
@@ -27,7 +28,7 @@
 
       <div>
       <p>
-       Find Me at the below sites
+       Find Me below 
       </p>
       </div>
      <div class="media">
