--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>My Work</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap_theta/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="shortcut icon" type="text/css" href="Resources/images/zoro.png">
 </head>
 <body>
 		 <nav class="navbar navbar-inverse">
@@ -18,7 +19,7 @@
     			  </div>
     			  <div class="collapse navbar-collapse" id="myNavbar">
       				<ul class="nav navbar-nav">
-        				<li><a href="About.html">About</a></li>
+        				<li><a href="contact.html">Contact</a></li>
         				<li><a href="gallery.html">Gallery</a></li>
       				</ul>
     			  </div>
@@ -32,8 +33,13 @@
 			<h1>Robert Munguti</h1>
 			<h4>All about me</h4>
 			<hr width="40%">
-			<a href="About.html" class="btn btn-info" role="button">About ME</a>
 		 </div>
+
+     <!-- <footer id="foot">
+       <a href="https://www.facebook.com/rober.munguti">Facebook</a>
+       <a href="https://www.instagram.com/i_am_munguti/">Instagram</a>
+       <a href="https://twitter.com/_RobertMunguti">Twitter</a>
+     </footer> -->
 
 	<!-- Linking to the jquery file -->
 	<script type="text/javascript" src="bootstrap_theta/js/jquery.js"></script>
