--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 	<title>My Work</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap_theta/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style3.css">
+  <link rel="shortcut icon" type="text/css" href="Resources/images/Frank.png">
 </head>
 <body>
 		 <nav class="navbar navbar-inverse">
@@ -14,11 +15,11 @@
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>
       				</button>
-      				<a class="navbar-brand" href="project.html">Nairobi Untamed</a>
+      				<a class="navbar-brand" href="index.html">Nairobi Untamed</a>
     			  </div>
     			  <div class="collapse navbar-collapse" id="myNavbar">
       				<ul class="nav navbar-nav">
-        				<li><a href="About.html">About</a></li>
+        				<li><a href="contact.html">Contact</a></li>
         				<li><a href="gallery.html">Gallery</a></li>
       				</ul>
     			  </div>
@@ -76,7 +77,7 @@
       </div>
      </div> 
 
-
+      <div id="sign">&#169;Brian King</div>
 
 
 	<!-- Linking to the jquery file -->
